# stacks-old

./: .hgignore  Bowtie.h  ChangeLog  Fasta.h  Fastq.h  INSTALL  Makefile  Makefile.am  Makefile.am.orig  Makefile.in  README  Sam.h  Tsv.h  clone_filter  cmb.cc  cmb.h  config.h  config.h.in  config.status  configure  configure.ac  constants.h  cstacks  cstacks.cc  cstacks.h  estacks  exstacks.cc  exstacks.h  hstacks  hstacks.cc  hstacks.h  input.cc  input.h  kmer_filter  kmers.cc  kmers.h  models.cc  models.h  mst.h  mstack.cc  (+20 more)
MacOSXClient/StacksGUI2/: AppDelegate.h  AppDelegate.mm  BrowserViewController.h  BrowserViewController.m  BrowserViewController.mm  BrowserWindow.xib  DNANSeq.h  DNASeq.h  DataStubber.h  DataStubber.mm  Fasta.h  Fastq.h  GenomeData.h  GenomeData.m  GenotypeCell.h  GenotypeCell.m  GenotypeEntry.h  GenotypeEntry.m  GenotypeView.h  GenotypeView.m  GenotypesViewController.h  GenotypesViewController.m  GenotypesViewController.xib  LocusCell.h  LocusCell.m  LocusView.h  LocusView.m  MasterViewController.h  MasterViewController.mm  MasterViewController.xib  PopMap.h  PopulationCell.m  PopulationView.h  PopulationView.m  Sam.h  SnpView.h  SnpsView.h  SnpsView.m  StackEntry.h  StackEntry.m  (+30 more)
MacOSXClient/StacksGUI2.xcodeproj/: project.pbxproj
MacOSXClient/StacksGUI2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MacOSXClient/StacksGUI2/core-refactor/: CLocus.cpp  CLocus.hpp  LociLoader.cpp  LociLoader.hpp  PopulationLoader.cpp  PopulationLoader.hpp
MacOSXClient/StacksGUI2/en.lproj/: MainMenu.xib
MacOSXClient/StacksGUI2Tests/: StacksGUI2Tests-Info.plist  StacksGUI2Tests.h  StacksGUI2Tests.m
MacOSXClient/StacksGui3/StacksGui3/: Allele.h  Allele.m  AlleleMO.h  AlleleMO.m  AlleleRepository.h  AlleleRepository.m  ColorGenerator.h  ColorGenerator.m  ConsensusStackEntryMO.h  ConsensusStackEntryMO.m  DatumCollectionViewItem.h  DatumCollectionViewItem.m  DatumMO.h  DatumMO.m  DatumRepository.h  DatumRepository.m  DatumView.h  DatumView.m  Depth.h  Depth.m  (+83 more)
MacOSXClient/StacksGui3/StacksGui3.xcodeproj/: project.pbxproj
MacOSXClient/StacksTests/: StacksTests-Info.plist  StacksTests-Prefix.pch  StacksTests.h  StacksTests.m
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: stacks_figure.graffle  vSTACKS Mac App license.docx
doc/STACKS_AGBT2014_Poster.graffle/: data.plist  image105.tiff  image107.tiff  image108.tiff  image60.tiff  image87.tiff
example_data/: female_only_stacks_tut.tgz  make_large_sample.sh  make_new_sample_data.sh  make_new_tiny_data.sh  make_pop_tiniest_data.sh  make_pop_tiny_data.sh  make_sample_data.sh  make_smaller_data.sh  make_tiny_data.sh  pop_stacks_tiny.tgz  popmap_new_demo  popmap_new_tut_tiny  popmap_pop_tiniest  popmap_stacks_new_tut  popmap_stacks_tut.txt  stacks_new_tut_tiny.tgz
htslib/: Makefile  Makefile.am
php/: CatalogClass.php  Locus.php  ajax.js  annotate.js  annotate_marker.php  annotate_population.php  catalog.php  catalog_genotypes.php  catalog_tag.php  constants.php  constants.php.dist  correct_genotype.php  correct_genotypes.php  db_functions.php  export.js  export.php  export_batch.php  fst_view.php  hapstat_view.php  header.php  index.php  last_modified.php  phist_view.php  pop_view.php  population_view.js  radtag.css  radtag.js  radtag_functions.php  samples.php  sequence_blast.php  stack_view.php  stacks.css  stacks.js  stacks_functions.php  sumstat_view.php  tag.php  tags.php  view_sequence.php
scripts/: convert_stacks.pl  convert_to_arlequin.pl  count_fixed_catalog_snps.py  denovo_map.pl  denovo_map.py  exec-velvet.pl  exec_velvet.pl  export_sql.pl  extract_interpop_chars.pl  genotypes.pl  index_radtags.pl  integrate_alignments.py  lhc_plot.py  load_radtags.pl  load_sequences.pl  markers.pl  plot_concentric_fst-hapavg.pl  plot_concentric_fst-hapdiff.pl  plot_concentric_fst-hapdiv.pl  plot_concentric_fst-hapstats.pl  plot_concentric_fst.pl  process_radtags.pl  ref_map.pl  sort_read_pairs.pl  stacks-dist-extract  stacks-gdb  stacks-integrate-alignments  stacks_export_notify.pl
sql/: catalog_index.sql  chr_index.sql  mysql.cnf.dist  radtags.sql  stacks.sql  tag_index.sql
src/: Alignment.h  Bam.h  BamCLocReader.h  BamI.cc  BamI.h  BamUnalignedI.h  Bowtie.h  BowtieI.h  Bustard.h  DNANSeq.cc  DNANSeq.h  DNASeq.cc  DNASeq.h  DNASeq4.cc  DNASeq4.h  Fasta.h  FastaI.h  Fastq.h  FastqI.h  GappedAln.h  Hwp.cc  Hwp.h  Logger.h  MetaPopInfo.cc  MetaPopInfo.h  Metapopulation_description.h  Mpopinfo.h  PhaseI.h  PopMap.h  PopSum.cc  PopSum.h  Sam.h  SamI.h  Seq.cc  Seq.h  SuffixTree.cc  SuffixTree.h  Tsv.h  Vcf.cc  Vcf.h  (+99 more)
tests/: README  cstacks.t  genotypes.t  kmer_filter.t  libstacks.sh  populations.t  process_radtags.t  pstacks.t  pstacks.t.trs  setup.sh  sstacks.t  ustacks.t  ustacks.t.trs
vStacks/: vStacks copy-Info.plist  vStacks-dev copy-Info.plist
vStacks/StacksGui3/: ColorGenerator.h  DatumAlleleMO.m  DatumMO.h  DatumMO.m  HaplotypeMO.m  LocusAlleleMO.m  LocusCell.m  LocusMO.h  LocusMO.m  LocusSnpMO.m  PopulationArrayController.h  PopulationArrayController.m  PopulationMO.h  ProgressController.m  SampleMO.m  SampleRepository.m  StacksConverter.mm  StacksEntryView.h  StacksEntryView.m  StacksGui3-Prefix.pch  main.m
vStacks/StacksGui3.xcodeproj/: project.pbxproj
vStacks/resources/: CertificateSigningRequest.certSigningRequest  stacks_logo2.ai
vStacks/vStacks/: 128x128.ai  512x512.ai  BowtieI.h  BustardI.h  CHCSVParser.h  CHCSVParser.m  ColorGenerator.h  ColorGenerator.m  DNANSeq.cc  DNANSeq.h  DNASeq.cc  DNASeq.h  DatumAlleleMO.h  DatumArrayController.h  DatumArrayController.m  DatumCollectionViewItem.h  DatumCollectionViewItem.m  DatumMO.h  DatumMO.m  DatumRepository.h  DatumRepository.m  DatumSnpMO.h  DatumSnpMO.m  DatumView.h  DatumView.m  FastaI.h  FastqI.h  GenericHashMO.h  GenericHashMO.m  GenericHashRepository.h  GenericHashRepository.m  GenotypeEntry.h  GenotypeEntry.m  LocusAlleleMO.h  LocusArrayController.h  LocusArrayController.m  LocusCell.h  LocusCell.m  LocusMO.h  LocusMO.m  (+84 more)
vStacks/vStacks.xcodeproj/: project.pbxproj
vStacks/vStacksTests/: test.tsv  vStacksTests.m
(+415 files in other folders)
